add_library(y STATIC)

set(dir "${Bison_DIR}/lib")

target_sources(
  y
  PRIVATE
    #${dir}/access.c
    ${dir}/allocator.c
    ${dir}/areadlink.c
    ${dir}/argmatch.c
    ${dir}/asnprintf.c
    ${dir}/asprintf.c
    #${dir}/at-func.c
    ${dir}/basename-lgpl.c
    ${dir}/basename.c
    ${dir}/binary-io.c
    ${dir}/bitrotate.c
    ${dir}/bitset.c
    ${dir}/bitset/array.c
    ${dir}/bitset/list.c
    ${dir}/bitset/stats.c
    ${dir}/bitset/table.c
    ${dir}/bitset/vector.c
    ${dir}/bitsetv.c
    ${dir}/c-ctype.c
    ${dir}/c-strcasecmp.c
    ${dir}/c-strncasecmp.c
    ${dir}/calloc.c
    ${dir}/canonicalize-lgpl.c
    ${dir}/canonicalize.c
    ${dir}/careadlinkat.c
    ${dir}/chdir-long.c
    ${dir}/cloexec.c
    ${dir}/close-stream.c
    ${dir}/close.c
    ${dir}/closedir.c
    ${dir}/closeout.c
    ${dir}/concat-filename.c
    ${dir}/dirfd.c
    ${dir}/dirname-lgpl.c
    ${dir}/dirname.c
    ${dir}/dup-safer-flag.c
    ${dir}/dup-safer.c
    ${dir}/dup.c
    ${dir}/dup2.c
    ${dir}/error.c
    ${dir}/execute.c
    ${dir}/exitfail.c
    ${dir}/fatal-signal.c
    ${dir}/fchdir.c
    ${dir}/fcntl.c
    ${dir}/fd-hook.c
    ${dir}/fd-safer-flag.c
    ${dir}/fd-safer.c
    ${dir}/fdopendir.c
    ${dir}/ffs.c
    ${dir}/ffsl.c
    ${dir}/file-set.c
    ${dir}/filenamecat-lgpl.c
    ${dir}/findprog-in.c
    ${dir}/float.c
    ${dir}/fopen-safer.c
    ${dir}/fopen.c
    ${dir}/fpending.c
    ${dir}/fprintf.c
    ${dir}/free.c
    ${dir}/frexp.c
    ${dir}/frexpl.c
    ${dir}/fseterr.c
    ${dir}/fstat.c
    ${dir}/fstatat.c
    ${dir}/fstrcmp.c
    #${dir}/fsync.c
    ${dir}/get-errno.c
    ${dir}/getcwd-lgpl.c
    ${dir}/getcwd.c
    ${dir}/getdelim.c
    ${dir}/getdtablesize.c
    ${dir}/gethrxtime.c
    ${dir}/getline.c
    ${dir}/getopt.c
    ${dir}/getopt1.c
    ${dir}/getprogname.c
    ${dir}/getrusage.c
    ${dir}/gettime.c
    ${dir}/gettimeofday.c
    ${dir}/gl_array_list.c
    ${dir}/gl_hash_map.c
    ${dir}/gl_linked_list.c
    ${dir}/gl_list.c
    ${dir}/gl_map.c
    ${dir}/gl_oset.c
    ${dir}/gl_rbtree_oset.c
    ${dir}/gl_rbtreehash_list.c
    ${dir}/gl_xlist.c
    ${dir}/gl_xmap.c
    ${dir}/glthread/lock.c
    ${dir}/glthread/threadlib.c
    ${dir}/glthread/tls.c
    ${dir}/hard-locale.c
    ${dir}/hash-pjw.c
    ${dir}/hash-triple-simple.c
    ${dir}/hash.c
    ${dir}/ialloc.c
    ${dir}/iconv_close.c
    ${dir}/iconv_open.c
    ${dir}/iconv.c
    ${dir}/integer_length_l.c
    ${dir}/integer_length.c
    ${dir}/isnan.c
    ${dir}/isnand.c
    ${dir}/isnanf.c
    ${dir}/isnanl.c
    ${dir}/iswblank.c
    ${dir}/iswdigit.c
    ${dir}/iswxdigit.c
    ${dir}/itold.c
    ${dir}/lc-charset-dispatch.c
    ${dir}/ldexpl.c
    ${dir}/localcharset.c
    ${dir}/lstat.c
    ${dir}/main.c
    ${dir}/malloc.c
    ${dir}/malloc/scratch_buffer_dupfree.c
    ${dir}/malloc/scratch_buffer_grow_preserve.c
    ${dir}/malloc/scratch_buffer_grow.c
    ${dir}/malloc/scratch_buffer_set_array_size.c
    ${dir}/malloca.c
    #${dir}/math.c
    ${dir}/mbchar.c
    ${dir}/mbfile.c
    ${dir}/mbrtowc.c
    ${dir}/mbsinit.c
    ${dir}/mbswidth.c
    ${dir}/mbtowc-lock.c
    ${dir}/memchr.c
    ${dir}/mempcpy.c
    ${dir}/memrchr.c
    ${dir}/msvc-inval.c
    #${dir}/msvc-nothrow.c
    ${dir}/obstack_printf.c
    ${dir}/obstack.c
    ${dir}/open.c
    ${dir}/openat-die.c
    ${dir}/openat-proc.c
    ${dir}/openat.c
    #${dir}/opendir.c
    #${dir}/os2-spawn.c
    ${dir}/path-join.c
    ${dir}/perror.c
    ${dir}/pipe-safer.c
    #${dir}/pipe.c
    ${dir}/pipe2-safer.c
    ${dir}/pipe2.c
    ${dir}/printf-args.c
    ${dir}/printf-frexp.c
    ${dir}/printf-frexpl.c
    ${dir}/printf-parse.c
    ${dir}/printf.c
    ${dir}/progname.c
    ${dir}/progreloc.c
    ${dir}/quotearg.c
    ${dir}/raise.c
    ${dir}/rawmemchr.c
    #${dir}/readdir.c
    ${dir}/readline.c
    ${dir}/readlink.c
    ${dir}/realloc.c
    ${dir}/reallocarray.c
    ${dir}/relocatable.c
    #${dir}/relocwrapper.c
    ${dir}/rename.c
    #${dir}/rewinddir.c
    ${dir}/rmdir.c
    ${dir}/save-cwd.c
    ${dir}/setenv.c
    ${dir}/setlocale_null.c
    ${dir}/setlocale-lock.c
    ${dir}/sig-handler.c
    #${dir}/sigaction.c
    ${dir}/signbitd.c
    ${dir}/signbitf.c
    ${dir}/signbitl.c
    #${dir}/sigprocmask.c
    ${dir}/snprintf.c
    ${dir}/spawn_faction_addchdir.c
    #${dir}/spawn_faction_addclose.c
    #${dir}/spawn_faction_adddup2.c
    #${dir}/spawn_faction_addopen.c
    #${dir}/spawn_faction_destroy.c
    #{dir}/spawn_faction_init.c
    ${dir}/spawn-pipe.c
    #${dir}/spawn.c
    #${dir}/spawnattr_destroy.c
    #${dir}/spawnattr_init.c
    #${dir}/spawnattr_setflags.c
    #${dir}/spawnattr_setpgroup.c
    #${dir}/spawnattr_setsigmask.c
    #${dir}/spawni.c
    #${dir}/spawnp.c
    ${dir}/sprintf.c
    ${dir}/stat-time.c
    ${dir}/stat-w32.c
    ${dir}/stat.c
    ${dir}/stpcpy.c
    ${dir}/stpncpy.c
    ${dir}/strchrnul.c
    ${dir}/strdup.c
    #${dir}/strerror_r.c
    #${dir}/strerror-override.c
    #${dir}/strerror.c
    ${dir}/stripslash.c
    ${dir}/strndup.c
    ${dir}/strnlen.c
    ${dir}/strtod.c
    ${dir}/strverscmp.c
    ${dir}/timespec.c
    ${dir}/timevar.c
    ${dir}/timevar.def
    ${dir}/unicodeio.c
    ${dir}/unistd.c
    ${dir}/unistr/u8-mbtoucr.c
    ${dir}/unistr/u8-uctomb-aux.c
    ${dir}/unistr/u8-uctomb.c
    ${dir}/uniwidth/width.c
    ${dir}/unlink.c
    ${dir}/unsetenv.c
    ${dir}/vasnprintf.c
    ${dir}/vasprintf.c
    ${dir}/vfprintf.c
    ${dir}/vsnprintf.c
    ${dir}/vsprintf.c
    ${dir}/wait-process.c
    #${dir}/waitpid.c
    ${dir}/wctype-h.c
    ${dir}/wcwidth.c
    #${dir}/windows-mutex.c
    #${dir}/windows-once.c
    #${dir}/windows-recmutex.c
    #${dir}/windows-rwlock.c
    #${dir}/windows-spawn.c
    #${dir}/windows-tls.c
    ${dir}/xalloc-die.c
    ${dir}/xconcat-filename.c
    ${dir}/xhash.c
    ${dir}/xmalloc.c
    ${dir}/xmemdup0.c
    ${dir}/xreadlink.c
    ${dir}/xsize.c
    ${dir}/xstrndup.c
    ${dir}/xtime.c
    ${dir}/yyerror.c
)

target_link_libraries(y PRIVATE Bison::configuration)

install(
  TARGETS y
  RUNTIME
    DESTINATION ${CMAKE_INSTALL_LIBDIR}
  LIBRARY
    DESTINATION ${CMAKE_INSTALL_LIBDIR}
)
